<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MeetingFragment">
    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle"
        android:gravity="center_horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_title_24"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/layout_margin_small"/>

            <EditText
                android:id="@+id/topic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Topic"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/ic_time_24"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/layout_margin_small"/>

            <TextView
                android:id="@+id/startDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="Lun. 28 oct. 2019"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="10:00"
                android:textSize="18sp" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/endTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:text="10:00"
                android:textSize="18sp" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivLocalisation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_room_24"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/layout_margin_small"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivParticipant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_add_24"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/layout_margin_small"/>

            <EditText
                android:id="@+id/participant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/add_guest"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:background="@null"
                android:drawableBottom="@drawable/ic_add_24"
                android:id="@+id/add_participant_button"/>
        </LinearLayout>
       <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/meetings_list"/>


        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/save"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
    </ScrollView>
</FrameLayout>